--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>json-simple</groupId>
   <artifactId>json-simple</artifactId>
-  <version>1.1-kalle-3</version>
+  <version>1.1-kalle-4</version>
 
   <name>json-simple</name>
   <description>JSON tools</description>
@@ -15,6 +15,12 @@
       <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
     </license>
   </licenses>
+
+  <scm>
+    <url>http://github.com/karlwettin/json-simple-kalle</url>
+    <connection>scm:git:git://github.com/karlwettin/json-simple-kalle</connection>
+    <developerConnection>scm:git:git@github.com:karlwettin/json-simple-kalle.git</developerConnection>
+  </scm>
 
   <distributionManagement>
     <repository>
