--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -4,4 +4,4 @@ log4j.appender.Stdout.layout.conversionPattern=%-5p - %-26.26c{1} - %m\n
 
 log4j.rootLogger=INFO,Stdout
 
-log4j.logger.org.json.simple.serialization.BeanCodec=WARN
+log4j.logger.org.json.simple.serialization=DEBUG
